# stm32-hal

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: ci.yml
.github/workflows/: rust.yml
examples/: adc.rs  audio.rs  can-send.rs  can.rs  clock_cfg.rs  communication.rs  comp.rs  dma_communication.rs  flash.rs  gpio.rs  i2c.rs  interrupts.rs  pdm_mic_dac_output.rs  pdm_mic_dfsdm.rs  qspi.rs  quad_spi.rs  rtc.rs  serial_nonblocking.rs  spi.rs  spi_imu_filtered.rs  syntax_overview.rs  timer.rs  uart.rs  usb_serial.rs  waveform_generator.rs
examples/blinky/: Cargo.toml  README.md  memory.x
examples/blinky/.cargo/: config.toml
examples/blinky/src/: main.rs
examples/blinky_timer_interrupt/: Cargo.toml  memory.x
examples/blinky_timer_interrupt/.cargo/: config.toml
examples/blinky_timer_interrupt/src/: main.rs
examples/conductivity_module/: Cargo.toml  README.md
examples/conductivity_module/.cargo/: config
examples/conductivity_module/src/: ec.rs  lib.rs  main.rs
examples/sawtooth/: Cargo.toml  memory.x
examples/sawtooth/.cargo/: config.toml
examples/sawtooth/src/: main.rs
examples/syntax_overview/: Cargo.toml  memory.x
examples/syntax_overview/.cargo/: config.toml
examples/syntax_overview/src/: main.rs  syntax_overview.rs
examples/usb_otg_no_crs_rtic/: Cargo.toml  README.md  memory.x  rust-toolchain.toml  shell.nix
examples/usb_otg_no_crs_rtic/.cargo/: config.toml
examples/usb_otg_no_crs_rtic/src/: main.rs
self-tests/: README.md
self-tests/f401/: Cargo.toml  README.md  build.rs  memory.x
self-tests/f401/.cargo/: config.toml
self-tests/f401/src/: main.rs
self-tests/f401/tests/: gpio.rs
src/: adc.rs  bluetooth.rs  can.rs  comp.rs  crc.rs  dac.rs  delay.rs  dfsdm.rs  dma.rs  dma_f3.rs  error.rs  ethernet.rs  fd_can.rs  flash.rs  fmac.rs  gpio.rs  hsem.rs  i2c.rs  i2c_f4.rs  i2s.rs  instant.rs  ipcc.rs  iwdg.rs  lib.rs  low_power.rs  lpuart.rs  macros.rs  opamp.rs  power.rs  qspi.rs  rng.rs  rtc.rs  sai.rs  serial.rs  spi.rs  spi_h7.rs  timer.rs  tl_mbox.rs  traits.rs  usart.rs  (+4 more)
src/bluetooth/: opcode.rs
src/bluetooth/command/: gap.rs  gatt.rs  hal.rs  l2cap.rs  mod.rs
src/bluetooth/event/: command.rs  mod.rs
src/can/: baseline.rs  f3.rs  f4l4.rs  g4.rs  mod.rs
src/clocks/: baseline.rs  f.rs  f3.rs  f3_4.rs  h.rs  h7.rs  l4.rs  l4_5.rs  l4_l5_g4.rs  l_g.rs  mod.rs
src/flash/: mod.rs  non_trustzone.rs  trustzone.rs
src/spi/: baseline.rs  h.rs  mod.rs
src/tl_mbox/: ble.rs  channels.rs  cmd.rs  evt.rs  lhci.rs  mm.rs  shci.rs  sys.rs  unsafe_linked_list.rs
