[package]
name = "stm32-hal2"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
description = "Hardware abstraction layer for the stm32 chips"
keywords = ["no-std", "stm32", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/David-OConnor/stm32-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]
edition = "2018"


[dependencies]
cortex-m = "0.7.1"

# Peripheral Access Crates
stm32f3 = { version = "0.13.0", optional = true }
stm32l4 = { version = "0.13.0", optional = true }
stm32l5 = { version = "0.13.0", optional = true }
stm32g4 = { version = "0.13.0", optional = true }
stm32h7 = { version = "0.13.0", optional = true }
stm32f4 = { version = "0.13.0", optional = true}

# Embedded traits
embedded-hal = { version = "0.2.4", features = ["unproven"] }
rtcc = "0.2"  # Embedded datetime traits.

stm32-usbd = { version = "0.6.0", optional = true }

# Misc features
cast = { version = "0.2.2", default-features = false }
nb = "1.0.0"
num-traits = { version = "0.2.14", default-features = false, features=["libm"] }  # For sqrt in timers
void = { version = "1.0.2", default-features = false }  # One off in `timer.rs`. Remove it A/R.

# Meta-programming
cfg-if = "1.0.0"  # if/else blocks for feature-gating
paste = "1.0.4"  # Token pasting, to make macros easier.

# todo: These are required by the l4 Serial and DMA implementation. Is it worth having these dependencies?
# todo: Can we remove them?
as-slice = "0.1"
generic-array = "0.13"
stable_deref_trait = { version = "1.1", default-features = false }

[package.metadata.docs.rs]
features = ["l4rt", "l4x3", "usb"]
targets = ["thumbv7em-none-eabihf"]

# Compile with one of these "runtime" features if the program
# will be directly flashed to an MCU; ie not a library.
[features]
f3rt = ["stm32f3/rt"]
l4rt = ["stm32l4/rt"]
l5rt = ["stm32l5/rt"]
g4rt = ["stm32g4/rt"]
h7rt = ["stm32h7/rt"]
f4rt = ["stm32f4/rt"]

# Features defined here are those taken from the SVD-generated STM32 PACs.

# [F3](https://docs.rs/crate/stm32f3/0.13.0/source/Cargo.toml)
f301 = ["stm32f3/stm32f301", "f3"]
f302 = ["stm32f3/stm32f302", "f3"]
f303 = ["stm32f3/stm32f303", "f3"]
f373 = ["stm32f3/stm32f373", "f3"]
f3x4 = ["stm32f3/stm32f3x4", "f3"]

# [L4](https://docs.rs/crate/stm32l4/0.13.0/source/Cargo.toml)
l4x1 = ["stm32l4/stm32l4x1", "l4"]
l4x2 = ["stm32l4/stm32l4x2", "l4"]
l4x3 = ["stm32l4/stm32l4x3", "l4"]
l4x5 = ["stm32l4/stm32l4x5", "l4"]
l4x6 = ["stm32l4/stm32l4x6", "l4"]
# todo: Handle l4+ (P, R, S, Q)

# [L5](https://docs.rs/crate/stm32l5/0.13.0/source/Cargo.toml)
l552 = ["stm32l5/stm32l552", "l5"]
l562 = ["stm32l5/stm32l562", "l5"]

# [G4](https://docs.rs/crate/stm32g4/0.13.0/source/Cargo.toml)
g431 = ["stm32g4/stm32g431", "g4"]
g441 = ["stm32g4/stm32g441", "g4"]
g471 = ["stm32g4/stm32g471", "g4"]
g473 = ["stm32g4/stm32g473", "g4"]
g474 = ["stm32g4/stm32g474", "g4"]
g483 = ["stm32g4/stm32g483", "g4"]
g484 = ["stm32g4/stm32g484", "g4"]
g491 = ["stm32g4/stm32g491", "g4"]
g4a1 = ["stm32g4/stm32g4a1", "g4"]

# [H7](https://docs.rs/crate/stm32h7/0.13.0/source/Cargo.toml)
h743 = ["stm32h7/stm32h743", "h7"]
h743v = ["stm32h7/stm32h743v", "h7"]
h747cm4 = ["stm32h7/stm32h747cm4", "h7"]
h747cm7 = ["stm32h7/stm32h747cm7", "h7"]
h753 = ["stm32h7/stm32h753", "h7"]
h753v = ["stm32h7/stm32h753v", "h7"]
h7b3 = ["stm32h7/stm32h7b3", "h7"]

usb = ["stm32-usbd"]

# [f4]
f446 = ["stm32f4/stm32f446", "f4"]

# These features are used to featured gate sections of code that apply
# to an entire family.
f3 = []
l4 = []
l5 = []
g4 = []
h7 = []
f4 = []
