[package]
name = "blinky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.2.3"
defmt-rtt = "0.2.0"

cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
stm32-hal2 = { version = "^1.2.0", features = ["f401", "f4rt"]}

[features]
default = [
    "defmt-debug",
]

defmt-debug = []

[profile.release]
debug-assertions = false
lto = 'fat'
opt-level = 3
