[package]
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
name = "STM32 HAL syntax overview"
edition = "2018"
version = "0.1.0"

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
# When importing this HAL, make sure to include a feature describing your MCU `eg l4x3`,
# and if this program is meant to be run and flashed directly (ie it's not a library),
# the runtime feature for that
# family, eg `l4rt`.
stm32-hal2 = { version = "^1.4.7", features = ["l4x3", "l4rt"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-