[workspace]
# Leave empty to prevent Cargo from being dumb

[package]
name = "stm32-hal-self-test-f401"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = { version = "1.0.1" }
rtt-target = { version="0.6.1", features = ["defmt"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
hal = { package = "stm32-hal2", path = "../../", features = ["f401"] }

[dev-dependencies]
embedded-test = { version = "0.6.0", features = ["defmt"] }

# To make plain `cargo test` work: Disable tests for the bin,
# because we are only using the intergration tests
# To make `cargo check --all-targets` work.
[[bin]]
name = "stm32-hal-self-test-f401"
test = false
bench = false

# Same as above, to make plain `cargo test` work instead of `cargo test --tests`
[lib]
test = false
bench = false

# Important: As we bring our own test harness, we need to disable the default one
[[test]]
name = "gpio"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(abc)'] }

[profile.dev]
opt-level = "s"

